# x-spider

./: .gitignore  README.md
docs/: feasibility.md  feasibility_new.md  final_report.md  research.md  research_new.md  中期报告.pptx  数据库比较结果.md
docs/feasibility/: baremetal.md  baremetal_programming.md  feasiability_jzq.md  feasibility-zyy.md  feasibility_REST_api.md
docs/files/rain_@remote_test/: .test.py.swo  @remote_prime.py
src/: README.md
src/cya/: learn_lua.md
src/jzq/@remote_test/: .data.txt.swp  @remote_average.py  @remote_test1.py  data.txt  pro.txt
src/jzq/lupa/: hello.lua  lua.lua  python.py  test.py
src/jzq/python_financial/: @remote_prime.py  AAPL.csv  func_py.py  test.py  test_2.py
src/jzq/rain_@remote_test/: .s.swp  .test.py.swp  data.txt  pro.txt
src/wq/: README.md  mysqltest.py
src/zk/: introduction_of_yjj.md
src/zk/test/: py_yjj_test.py  pytest.py  sqldb.py
src/zk/yijinjing-lite2/: CMakeLists.txt  env-config.cmake
src/zk/yijinjing-lite2/mycode/: CMakeLists.txt  read.py  readSingleData.cpp  readdata.cpp  (+6 more)
src/zyy/: final-zyy.md
src/zyy/ctypestest/: reader.cpp  work.py  writer.cpp
src/zyy/executors/: CMakeLists.txt  myexecutor.cpp
src/zyy/executors/tasklib/: CMakeCache.txt  CMakeLists.txt
src/zyy/executors/tasklib/spdlog/src/spdlog-stamp/: spdlog-gitinfo.txt
src/zyy/executors/tasklib/spdlog/tmp/: spdlog-gitclone.cmake  spdlog-gitupdate.cmake
src/zyy/final/: spiderfunc.py  stock.py  yjj_page_service
src/zyy/mysqltest/: test.py  test1.py  test2.py
src/zyy/yjjtest/: CMakeLists.txt  mytest.cpp  reader.cpp  writer.cpp
(+1 files in other folders)
